# aapen-term

./: .gitignore  README.md
board/: README.md  easyeda_aapen_term.json
firmware/: CMakeLists.txt
firmware/term/: .host.c.swp  .proto.c.swp  .ps2.c.swp  .test_vga.c.swp  .vga16_graphics.c.swp  .vga16_graphics_font.c.swo  CMakeCache.txt  CMakeLists.txt  host.c  host.h  hsync.pio  p2s.c.save  proto.c  proto.h  ps2.c  ps2.h  ps2.pio  scancodes.c  scancodes.h  term.c  test_ps2.c  test_vga.c  test_vga_pins.c  vga16_graphics.c  vga16_graphics.h
